objects/e_Product__c.object
<CustomObject>
    <description>Type of Electronics item</description>
    <fields>
        <fullName>Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Enter Product Name</inlineHelpText>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Product__c</fullName>
        <label>Type of Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Watch</fullName>
                </value>
                <value>
                    <fullName>Fridge</fullName>
                </value>
                <value>
                    <fullName>Washing Machine</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Camera</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Headset</fullName>
                </value>
                <value>
                    <fullName>Drone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>Item description</description>
        <label>description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>e-Product</label>
    <nameField>
        <label>e-Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e-Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>